--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "json-server --watch db.json --port 4000"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
+    "korean-regexp": "^1.0.13",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.7"
+    "react-router-dom": "^7.6.1",
+    "tailwindcss": "^4.1.7",
+    "teenyicons": "^0.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
@@ -24,6 +28,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "json-server": "^1.0.0-beta.3",
     "vite": "^6.3.5"
   }
 }
